--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,6 +5,11 @@ test_task:
     - git clone https://github.com/rubygems/rubygems.git $HOME/rubygems/
     - cd $HOME/rubygems
     - rake setup
+  debug_info_script:
+    - ruby --version
+    - gem env version
+    - bundle version
+    - ruby -Ilib bin/gem env version
   script:
     - cd $HOME/rubygems
     # Why the heck is this necessary? I don't have to do it locally.
